# atcoder-auto-tester

./: .config.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  args.rs  command.rs  config.rs  detector.rs  error.rs  lib.rs  message.rs  runner.rs
