[package]
name = "atcoder-auto-tester"
version = "0.9.0"
authors = ["Ark <target.ark@gmail.com>"]
edition = "2018"
description = "An auto tester for AtCoder. This tool monitors files and automatically runs tests when it detects file changes."

[dependencies]
clap = "2.33"
inotify = "0.8"
regex = "1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
colored = "1.9"
itertools = "0.8"

[[bin]]
name = "atcoder-auto-tester"
path = "src/bin/main.rs"
