[package]
name = "atcoder-auto-tester"
version = "0.9.1"
authors = ["Ark <target.ark@gmail.com>"]
description = "An auto tester for AtCoder. This tool monitors files and automatically runs tests when it detects file changes."
repository = "https://github.com/arkark/atcoder-auto-tester"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33"
inotify = "0.8"
regex = "1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
colored = "1.9"
itertools = "0.8"

[[bin]]
name = "atcoder-auto-tester"
path = "src/bin/main.rs"
